--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
+anyio==3.7.0
 appdata==2.2.0
+certifi==2023.5.7
+click==8.1.3
+flet==0.7.4
+flet-core==0.7.4
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.4
+oauthlib==3.2.2
+packaging==23.1
+pyqt6-plugins==6.4.2.2.3
+PyQt6-Qt6==6.4.3
+PyQt6-sip==13.5.1
+PySide6-Addons==6.5.1.1
+PySide6-Essentials==6.5.1.1
+python-dotenv==1.0.0
+qt6-applications==6.4.3.2.3
+qt6-tools==6.4.3.1.3
+repath==0.9.0
+rfc3986==1.5.0
+shiboken6==6.5.1.1
+six==1.16.0
+sniffio==1.3.0
+watchdog==2.3.1
+websocket-client==1.6.1
+websockets==10.4
