--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,17 @@ httpx==0.23.3
 idna==3.4
 oauthlib==3.2.2
 packaging==23.1
+PyQt5==5.15.9
+pyqt5-plugins==5.15.9.2.3
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.1
+pyqt5-tools==5.15.9.3.3
 pyqt6-plugins==6.4.2.2.3
 PyQt6-Qt6==6.4.3
 PyQt6-sip==13.5.1
-PySide6-Addons==6.5.1.1
-PySide6-Essentials==6.5.1.1
 python-dotenv==1.0.0
+qt5-applications==5.15.2.2.3
+qt5-tools==5.15.2.1.3
 qt6-applications==6.4.3.2.3
 qt6-tools==6.4.3.1.3
 repath==0.9.0
