--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+altgraph==0.17.3
 appdata==2.2.0
 click==8.1.3
 pip-autoremove==0.10.0
+pyinstaller==5.13.0
+pyinstaller-hooks-contrib==2023.5
 PyQt5==5.15.9
 pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
