--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.12.1
 pyqt5-tools==5.15.9.3.3
+PyQt6==6.4.2
 pyqt6-plugins==6.4.2.2.3
 PyQt6-Qt6==6.4.3
 PyQt6-sip==13.5.1
