--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 altgraph==0.17.3
 appdata==2.2.0
-click==8.1.3
+colorthief==0.2.1
+Pillow==10.0.0
 pip-autoremove==0.10.0
 pyinstaller==5.13.0
 pyinstaller-hooks-contrib==2023.5
-PyQt6==6.4.2
-pyqt6-plugins==6.4.2.2.3
-PyQt6-Qt6==6.4.3
-PyQt6-sip==13.5.1
-qt6-applications==6.4.3.2.3
-qt6-tools==6.4.3.1.3
+PyQt6==6.5.2
+PyQt6-Qt6==6.5.2
+PyQt6-sip==13.5.2
 rfc3986==1.5.0
 shiboken6==6.5.1.1
