--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,10 @@ codetiming = "^1.4.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry-pyinstaller-plugin.scripts]
+TimeTracker = { source = "timetracking/main.py", type = "onedir", bundle = false, windowed = true, icon = "timetracking\\clock.ico" }
+
+[tool.poetry-pyinstaller-plugin.collect]
+# Collect all submodules, data files & binaries for 'package_A' and 'package_B'
+data = ['clock.png', 'timetracking/MainWindow.ui']
