--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -16,11 +16,25 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Python Poetry Action
+        uses: abatilo/actions-poetry@v3.0.0
+       
+   
+
+
+      - name: Install Dependencies using Poetry
+        run: poetry install
+   
+
+      - name: Run pytest
+        run: PYTHONPATH=src/ poetry run python -m pytest -v --cov=src/ tests/
+            
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install ruff pytest
+#          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #      - name: Lint with ruff
 #        run: |
 #          # stop the build if there are Python syntax errors or undefined names
