--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -25,7 +25,7 @@ jobs:
         run: poetry install
 
       - name: Run pytest
-        run: PYTHONPATH=src/ poetry run python -m pytest -v --cov=src/ tests/
+        run: poetry run python -m pytest -v tests/
             
 #      - name: Install dependencies
 #        run: |
