--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,13 @@ pytest = "^8.2.2"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-#[tool.poetry-pyinstaller-plugin.scripts]
-#TimeTracker = { source = "timetracking/main.py", type = "onedir", bundle = false, windowed = true, icon = "timetracking\\clock.ico" }
-#
-#[tool.poetry-pyinstaller-plugin.collect]
-#data = ['clock.png', 'timetracking/MainWindow.ui']
+[tool.poetry-pyinstaller-plugin.scripts]
+TimeTracker = { source = "timetracking/main.py", type = "onedir", bundle = false, windowed = true, icon = "timetracking\\clock.ico" }
+
+[tool.poetry-pyinstaller-plugin.include]
+# include ui files
+"timetracking/*.ui" = "timetracking/."
+"timetracking/clock.*" = "timetracking/."
+
+[tool.poetry-pyinstaller-plugin.collect]
+data = ['clock.png', 'timetracking/MainWindow.ui']
